# advent-of-code-2023

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md  main.cpp
cpp/day01/: day01.h  day01Part1.cpp  day01Part2.cpp  test_01_in.txt
cpp/day02/: day02.h  day02Part1.cpp  day02Part2.cpp  test_01_in.txt
cpp/day03/: day03.h  day03Part1.cpp
cpp/day05/: day05.h  day05Part1.cpp
cpp/day06/: day06.h  day06Part1.cpp  day06Part2.cpp
cpp/helpers/: helpers.cpp  helpers.h
go/: .gitignore  README.md  aoc2023.go
go/day14/: day14.go
go/day15/: day15.go  my_test_01_in.txt
godot/: .gitignore  Godot AoC 2023.csproj  Godot AoC 2023.sln  Godot AoC 2023.sln.DotSettings  README.md  export_presets.cfg  icon.svg.import  project.godot
godot/addons/: .gitignore
godot/day16/: day_16_part_1.gd  day_16_part_1.tscn
godot/day21/: Day21Hud.cs  Day21Hud.tscn  Day21MainCamera.cs  Day21Part1.cs  Day21Part1.tscn  Day21Part2.cs  Day21Part2.tscn  Day21Visualization.cs  Day21Visualization.tscn  day21_tiles.aseprite  day21_tiles.png.import  day21_tileset.tres  day_21_part_1.tscn  day_21_ui.tscn  monof55.ttf.import  tmp_image.png.import
godot/day23/: day_23_part_1.gd  day_23_part_1.tscn  day_23_part_2.gd  day_23_part_2.tscn  tileset.aseprite  tileset.png.import  tileset.tres
godot/scenes/: day_16_part_1.tscn
monogame/: Program.cs  README.md  monogame.csproj  monogame.sln
monogame/day04/: Day04Part1.cs
unity/: .gitignore  README.md  unity.sln.DotSettings
unity/Assets/: UniversalRenderPipelineGlobalSettings.asset
unreal/: .gitignore
unreal/Config/: DefaultEngine.ini  (+1 more)
(+130 files in other folders)
